--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
+/* @import '~antd/dist/antd.css'; */
+
+.TopBar {
+  background-color: white;
+}
+
 .App {
+  min-height: 100vh;
   text-align: center;
+  background-color: whitesmoke;
+}
+
+.SearchBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 80vh;
 }
 
 .App-logo {
