--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -1,7 +1,7 @@
 .LandingTitle {
     font-size: 72px;
     font-weight: 1000;
-    background: -webkit-linear-gradient(top left, #ff00d9, rgb(55, 7, 132));
+    background: -webkit-linear-gradient(top left, #ff00d9, #370784);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
