lighter shadow & bigger footer

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
 .Title {
   font-size: 72px;
   font-weight: 1000;
-  filter: drop-shadow(2px 1px 2px #0e0222c4);
-  background: -webkit-linear-gradient(top left, #ff00d9, #370784);
+  filter: drop-shadow(2px 1px 2px #0e02226d);
+  background: -webkit-linear-gradient(top left, hsl(309, 100%, 60%), #370784);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -23,6 +23,7 @@
 .Footer {
   display: flex;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .App-logo {
